# Frontend-Auth-UI

./: README.md
backend/: pyproject.toml
backend/app/: auth.py  main.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Auth.tsx  AuthContext.jsx  Hero.tsx  Navbar.tsx  ProtectedRoute.jsx
frontend/src/components/Home/: Auth.jsx  Hero.jsx  Navbar.jsx
